# wanderland

./: .gitignore  README.md  index.html
3d_recon_benchmark/: README.md  eval_pose.py  pyproject.toml
data_processing/: README.md  ckpt2ply.py  pcd2mesh.py  pyproject.toml  scene2usdz.py
download/: README.md  download.py  eval_scenes_v1.txt  pyproject.toml  train_scenes_v1.txt
navigation/: README.md
static/css/: index.css
static/js/: index.js
