[project]
name = "wanderland-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2.4.1",
    "open3d>=0.19.0",
    "pycolmap>=3.13.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "torch>=2.9.1",
    "trimesh>=4.11.1",
    "usd-core>=25.11",
]
